# algo-station

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  build.rs
content/articles/: advanced-dp-01-dp.md  advanced-dp-02-dp.md  advanced-dp-03-dp.md  advanced-dp-04-dp.md  advanced-dp-05-dp.md  advanced-dp-06-dp.md  advanced-dp-07-dp.md  advanced-dp-08-dp.md  advanced-dp-09-topic-1028060.md  advanced-dp-10-topic-1359339.md  advanced-dp-11-dp.md  advanced-dp-12-dp.md  array-string-01-two-end-pointers.md  array-string-02-same-direction-overwrite.md  array-string-03-sliding-window-count.md  array-string-04-fix-one-enumerate.md  array-string-05-skip-duplicates-after-sort.md  array-string-06-inplace-swap-stable-write.md  array-string-07-prefix-suffix-product.md  array-string-08-difference-array.md  (+324 more)
docs/: judge-runbook.md  openapi.yaml  rollback.md
frontend/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: 20260101000001_initial.sql  20260101000002_problem_content.sql  20260601000001_drop_statement_solution_tables.sql  20260601000002_add_repo_dir.sql  20260625000001_fts_trigram.sql  20260625000002_progress_tables.sql  20260715000001_learning_path_and_judge.sql
scripts/: cleanup_leetcode.sh  generate_article_batch.py  generate_curriculum.py
src/: articles_seed.rs  curriculum.rs  db.rs  error.rs  judge.rs  learning.rs  lib.rs  main.rs  models.rs  problem_seed.rs  state.rs  static_assets.rs
tests/: curriculum_contract.rs  judge_docker.rs  judge_queue.rs  learning_api.rs  learning_rules.rs  learning_storage.rs
(+58 files in other folders)
