[package]
name = "algo-station"
version = "0.1.0"
edition = "2024"
default-run = "algo-station"

[[bin]]
name = "algo-station"
path = "src/main.rs"

[[bin]]
name = "scrape"
path = "src/bin/scrape.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header", "request-id"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

[profile.release]
opt-level = 3
lto = "thin"
